Add basic TeX support

--- a/setup.yml
+++ b/setup.yml
@@ -51,6 +51,7 @@
     - include: tasks/chef.yml
     - include: tasks/shared.yml
     - include: tasks/pkgfile.yml
+    - include: tasks/tex.yml
 
     - debug: msg={{ item }}
       with_items:
