--- a/tasks/desktop.yml
+++ b/tasks/desktop.yml
@@ -23,6 +23,8 @@
     - rxvt-unicode
     - slock
     - alsa-utils
+    - libnotify
+    - xfce4-notifyd
 
 - name: Install qt4 for pinentry-qt4 if on Chris profile
   pacman: name=qt4 state=present
