--- a/tasks/basic-tools.yml
+++ b/tasks/basic-tools.yml
@@ -14,6 +14,8 @@
     - python2-boto
     # For irssi scripts
     - perl-datetime
+    # For photo backups
+    - perl-image-exiftool
 
 - name: Install extra tools if using Chris profile
   pacman: name={{ item }} state=present
