--- a/tasks/rbenv.yml
+++ b/tasks/rbenv.yml
@@ -6,14 +6,12 @@
     - ruby-build
   sudo: yes
   sudo_user: makepkg
-  when: user == 'chris'
 
 - name: Check if ruby is installed in rbenv
   command: rbenv versions
   register: rbenv_versions
   sudo: yes
   sudo_user: "{{ user }}"
-  when: user == "chris"
   changed_when: false
 
 - name: Install ruby 2.1.2 using rbenv
@@ -24,18 +22,17 @@
     - rbenv global 2.1.2
   sudo: yes
   sudo_user: "{{ user }}"
-  when: user == "chris" and rbenv_versions.stdout == ""
+  when: 'rbenv_versions.stdout == ""'
 
 - name: Check if bundler is installed
   shell: eval "$(rbenv init -)" && gem list bundler
   register: rbenv_bundler
   sudo: yes
   sudo_user: "{{ user }}"
-  when: user == "chris"
   changed_when: false
 
 - name: Install bundler
   shell: eval "$(rbenv init -)" && gem install bundler && rbenv rehash
   sudo: yes
   sudo_user: "{{ user }}"
-  when: user == "chris" and "bundler" not in rbenv_bundler.stdout
+  when: '"bundler" not in rbenv_bundler.stdout'
