--- a/tasks/dotfiles.yml
+++ b/tasks/dotfiles.yml
@@ -1,38 +1,20 @@
 ---
-- stat: path=~{{ user }}/git/dotfiles
-  register: user_dotfiles
-
-- stat: path=~{{ user }}/git/dotfiles
-  register: root_dotfiles
-
-- name: Clone Chris' dotfiles for {{ user }}
+- name: Clone dotfiles for {{ item }}
   sudo: yes
-  sudo_user: "{{ user }}"
-  git: repo=git://github.com/cdown/dotfiles.git dest=~{{ user }}/git/dotfiles accept_hostkey=yes
-  register: dotfiles_clone
-  when: "not {{ user_dotfiles.stat.exists }}"
+  sudo_user: "{{ item }}"
+  git: repo=git://github.com/cdown/dotfiles.git dest=~{{ item }}/git/dotfiles accept_hostkey=yes
+  with_items: users_inc_super
 
-- name: Clone Chris' dotfiles for root
-  git: repo=git://github.com/cdown/dotfiles.git dest=~root/git/dotfiles accept_hostkey=yes
-  register: dotfiles_clone_root
-  when: "not {{ root_dotfiles.stat.exists }}"
-
-- name: Set up dotfiles for {{ user }}
+- name: Set up dotfiles for {{ item }}
   sudo: yes
-  sudo_user: "{{ user }}"
-  command: ./setup chdir="~{{ user }}/git/dotfiles"
-  when: '{{ dotfiles_clone.changed }}'
+  sudo_user: "{{ item }}"
+  command: ./setup chdir="~{{ item }}/git/dotfiles"
+  with_items: users_inc_super
+  changed_when: false
 
-- name: Set up dotfiles for root
-  command: ./setup chdir="~root/git/dotfiles"
-  when: '{{ dotfiles_clone_root.changed }}'
-
-- name: "Set {{ user }}'s dotfiles to push using ssh"
+- name: "Set {{ item }}'s dotfiles to push using ssh"
   sudo: yes
-  sudo_user: "{{ user }}"
-  command: git remote set-url --push origin git@github.com:cdown/dotfiles.git chdir=~{{ user }}/git/dotfiles
-  when: '{{ dotfiles_clone.changed }}'
-
-- name: "Set root's dotfiles to push using ssh"
-  command: git remote set-url --push origin git@github.com:cdown/dotfiles.git chdir=~root/git/dotfiles
-  when: '{{ dotfiles_clone_root.changed }}'
+  sudo_user: "{{ item }}"
+  command: git remote set-url --push origin git@github.com:cdown/dotfiles.git chdir=~{{ item }}/git/dotfiles
+  with_items: users_inc_super
+  changed_when: false
