Revert "Remove shared Virtualbox folders task"
This reverts commit 2e0c3a1bb0586d28983f080b408df5f4ecd1604d.

--- a/setup.yml
+++ b/setup.yml
@@ -42,6 +42,7 @@
     - include: tasks/dotfiles.yml
       tags:
         - dotfiles
+    - include: tasks/shared.yml
     - include: tasks/pkgfile.yml
     - include: tasks/lin-dev.yml
 
