Readd rbenv task with user=chris
This reverts commit 824c18a3e71c73c7b13a42fc8b1a539926894fab.

--- a/setup.yml
+++ b/setup.yml
@@ -42,6 +42,7 @@
     - include: tasks/dotfiles.yml user=root
     - include: tasks/dotfiles.yml user=chris
     - include: tasks/dotfiles.yml user=lin
+    - include: tasks/rbenv.yml user=chris
     - include: tasks/shared.yml
       when: model == "VirtualBox"
     - include: tasks/pkgfile.yml
