--- a/files/ipython-notebook.service
+++ b/files/ipython-notebook.service
@@ -4,7 +4,7 @@ Description=IPython notebook
 [Service]
 Type=simple
 PIDFile=/var/run/ipython-notebook.pid
-ExecStart=/usr/bin/ipython notebook --no-browser --pylab=inline
+ExecStart=/usr/bin/ipython notebook --no-browser
 User=ipython
 Group=ipython
 WorkingDirectory=/srv/ipython-notebook/notebooks
