--- a/tasks/basic-tools.yml
+++ b/tasks/basic-tools.yml
@@ -3,8 +3,7 @@
   pacman: name={{ item }} state=present
   with_items:
     - vim
-    - zip
-    - unzip
+    - p7zip
     - rsync
     - tmux
     - gnome-icon-theme
