--- a/tasks/lin-dev.yml
+++ b/tasks/lin-dev.yml
@@ -7,6 +7,9 @@
     - python-pyzmq
     - python-jsonschema
 
+- name: Install libreoffice
+  pacman: name=libreoffice-still
+
 - name: Create local iPython user
   user: name=ipython home=/srv/ipython-notebook
 
