--- a/tasks/cron.yml
+++ b/tasks/cron.yml
@@ -6,13 +6,13 @@
   service: name=cronie state=started enabled=yes
 
 - name: Cron to download updates
-  copy: src=files/cron/download-updates dest=/etc/cron.d/download-updates
+  template: src=cron/download-updates dest=/etc/cron.d/download-updates
 
 - name: Install reflector for mirror list autoupdate
   pacman: name=reflector state=present
 
 - name: Cron to update mirror list
-  copy: src=files/cron/reflector dest=/etc/cron.d/reflector
+  template: src=cron/reflector dest=/etc/cron.d/reflector
 
 - name: Cron to clear corrupted journals
-  copy: src=files/cron/clear-corrupt-journals dest=/etc/cron.d/clear-corrupt-journals
+  template: src=files/cron/clear-corrupt-journals dest=/etc/cron.d/clear-corrupt-journals
